# rust-confu

./: .env  .gitignore  Cargo.toml  README.md
confu/: Cargo.toml  README.md  crates-io.md
confu/src/: lib.rs
confu/tests/: compiles.rs  defaults.rs  runner.rs
confu_derive/: Cargo.toml  crates-io.md
confu_derive/src/: lib.rs
confu_example/: .env  Cargo.toml  Makefile
confu_example/src/: main.rs  main_foo.rs
example/: .env  Cargo.toml  README.md
example/src/: config.rs  main.rs
examples/basic/: Cargo.toml
examples/basic/src/: config.rs
