[package]
name = "confu"
version = "0.1.0"
authors = ["izirku <izirku@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# confu_derive = { version = "=0.1.0", optional = true, path = "../confu_derive"}
#  can we even function without it?
confu_derive = { version = "=0.1.0", path = "../confu_derive"}

# [dev-dependencies]
# confu_derive = { version = "=0.1.0", path = "../confu_derive"}

# [features]
# default = []
# derive = ["confu_derive"]