[package]
name = "confu"
version = "0.1.0"
authors = ["Evgenii Grigorev <evgenii.grigorev@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "No frils app configuration via environment or args"
categories = ["configuration"]

[dependencies]
confu_derive = { version = "=0.1.0", path = "../confu_derive"}
