[package]
name = "confu_derive"
version = "0.1.0"
authors = ["izirku <izirku@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"

[dependencies.syn]
version = "1.0.72"
features = ["extra-traits"]
# syn = "1.0.72"
