[package]
name = "confu_derive"
version = "0.1.0"
authors = ["Evgenii Grigorev <evgenii.grigorev@protonmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "proc macro crate for the confu crate"
categories = ["configuration"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0.9"
syn = "1.0.72"
