[package]
name = "confu_derive"
version = "0.1.3"
authors = ["Evgenii Grigorev <zjekadev@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "proc macro crate for the confu crate"
homepage = "https://github.com/izirku/confu"
repository = "https://github.com/izirku/confu"
documentation = "https://docs.rs/confu_derive"
keywords = ["configuration", "environment", "command", "arguments"]
categories = ["config"]
readme = "crates-io.md"
include = ["src/**/*.rs", "crates-io.md", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1"
proc-macro-error = "^1"
quote = "^1"
syn = "^1"
